# mem-vault

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: architecture.md  overview.md
hooks/: README.md
scripts/: backfill_aprendido_stub.py  smoketest.py
src/mem_vault/: __init__.py  antagonist.py  cli.py  config.py  consolidate.py  discovery.py  eval.py  export.py  graph.py  hybrid.py  iberian_filter.py  index.py  metrics.py  ranker.py  redaction.py  reflection.py  remote.py  retrieval.py  server.py  storage.py  sync.py  telemetry.py  tool_schemas.py
src/mem_vault/cli/: __init__.py  _common.py  consolidate.py  crud.py  doctor.py  eval_cmd.py  export_cmd.py  hooks_cmd.py  import_engram.py  install_skill.py  learn.py  metrics.py  reflect_cmd.py  reindex.py  sync_cmd.py  ui.py
src/mem_vault/hooks/: __init__.py  sessionstart.py  stop.py  userprompt.py
src/mem_vault/skills/: SKILL.md
src/mem_vault/ui/: __init__.py  server.py
src/mem_vault/ui/static/: dashboard.css  graph.css  style.css
src/mem_vault/ui/templates/: _detail.html  _feedback.html  _row.html  _rows.html  _stats.html  _tab_by_project.html  _tab_duplicates.html  _tab_overview.html  _tab_quality.html  _tab_top.html  dashboard.html  graph.html  index.html
tests/: test_antagonist.py  test_breaker.py  test_cli_common.py  test_cli_crud.py  test_cli_import_engram.py  test_config.py  test_consolidate.py  test_contracts.py  test_contradict.py  test_corpus_cache.py  test_decay_and_locale.py  test_discovery_tools.py  test_doctor.py  test_eval.py  test_export.py  test_feedback_loop.py  test_graph.py  test_hash_reindex.py  test_history.py  test_hooks.py  test_hybrid.py  test_iberian_filter.py  test_index_helpers.py  test_install_skill.py  test_linking_synthesize.py  test_metrics.py  test_metrics_cli.py  test_neighborhood.py  test_per_memory_decay.py  test_project_scope.py  test_ranker.py  test_redaction.py  test_reflection.py  test_related.py  test_remote.py  test_reranker.py  test_robustness.py  test_server_dispatch.py  test_server_handlers.py  test_storage.py  (+7 more)
