[project]
name = "mem-vault"
version = "0.1.0"
description = "Local MCP server that gives AI agents infinite memory backed by an Obsidian vault. 100% local stack: Ollama + Qdrant + sqlite. No API keys."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Fernando Ferrari", email = "fernandoferrari@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["mcp", "memory", "obsidian", "ollama", "rag", "agents", "claude", "devin", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "mem0ai>=0.1.0",
    "ollama>=0.3.0",
    "python-frontmatter>=1.1.0",
    "pydantic>=2.0",
    "qdrant-client>=1.7.0",
    "platformdirs>=4.9.6",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
hybrid = [
    # BM25 keyword retrieval blended with the dense vector search.
    # mem0 auto-detects fastembed and enables hybrid scoring transparently.
    "fastembed>=0.3",
]
ui = [
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "uvicorn>=0.46.0",
]

[project.scripts]
mem-vault = "mem_vault.cli:main"
mem-vault-mcp = "mem_vault.server:main"

[project.urls]
Homepage = "https://github.com/jagoff/mem-vault"
Issues = "https://github.com/jagoff/mem-vault/issues"
Documentation = "https://github.com/jagoff/mem-vault#readme"
Changelog = "https://github.com/jagoff/mem-vault/blob/master/CHANGELOG.md"
Repository = "https://github.com/jagoff/mem-vault.git"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# E501 — line length is enforced softly by ruff format; we don't fail on it.
# B008 — fastapi/typer/click APIs commonly use `param=Query(...)` as defaults.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
